# advent2018-fast

./: CMakeLists.txt  README.md
input/: README.md  day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day09.txt  day10.txt  day12.txt  day13.txt  day14.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day23.txt  day24.txt  day25.txt
src/: advent2018.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp
